--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -587,7 +587,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="21 22 20">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="21" data-to-marge-iphone-id="21 22 20">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="21" data-to-marge-iphone-id="21 22 20">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="21" data-to-marge-iphone-id="21 22 20">※要問</td>
@@ -616,7 +616,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="21" data-to-marge-iphone-id="21 22 20">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="22">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="22">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="22">※要問</td>
@@ -721,7 +721,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="24 25 23">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="24" data-to-marge-iphone-id="24 25 23">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="24" data-to-marge-iphone-id="24 25 23">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="24" data-to-marge-iphone-id="24 25 23">※要問</td>
@@ -750,7 +750,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="24" data-to-marge-iphone-id="24 25 23">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="25">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="25">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="25">※要問</td>
@@ -851,7 +851,7 @@
                 <td class="nodata all-price" data-shop-id="20" iphen-average-id="27 28 26">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="27" data-to-marge-iphone-id="27 28 26">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="27" data-to-marge-iphone-id="27 28 26">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="27" data-to-marge-iphone-id="27 28 26">※要問</td>
@@ -880,7 +880,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="27" data-to-marge-iphone-id="27 28 26">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="28">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="28">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="28">※要問</td>
@@ -981,7 +981,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="30 31 29">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="30" data-to-marge-iphone-id="30 31 29">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="30" data-to-marge-iphone-id="30 31 29">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="30" data-to-marge-iphone-id="30 31 29">※要問</td>
@@ -1010,7 +1010,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="30" data-to-marge-iphone-id="30 31 29">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="31">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="31">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="31">※要問</td>
@@ -1155,7 +1155,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="12 13 11">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="12" data-to-marge-iphone-id="12 13 11">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="12" data-to-marge-iphone-id="12 13 11">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="12" data-to-marge-iphone-id="12 13 11">※要問</td>
@@ -1184,7 +1184,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="12" data-to-marge-iphone-id="12 13 11">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="13">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="13">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="13">※要問</td>
@@ -1285,7 +1285,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="15 16 14">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="15" data-to-marge-iphone-id="15 16 14">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="15" data-to-marge-iphone-id="15 16 14">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="15" data-to-marge-iphone-id="15 16 14">※要問</td>
@@ -1314,7 +1314,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="15" data-to-marge-iphone-id="15 16 14">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="16">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="16">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="16">※要問</td>
@@ -1415,7 +1415,7 @@
                 <td class="nodata all-price" data-shop-id="20" data-iphen-average-id="18 19 17">※要問</td>
             </tr>
             <tr data-color="orange">
-                <td style="background:#f68a44;text-align:left;">Orange</td>
+                <td style="background:#FF9900FF;text-align:left;">Orange</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="18" data-to-marge-iphone-id="18 19 17">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="18" data-to-marge-iphone-id="18 19 17">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="18" data-to-marge-iphone-id="18 19 17">※要問</td>
@@ -1444,7 +1444,7 @@
                 <td class="nodata" data-shop-id="20" data-iphen-id="18" data-to-marge-iphone-id="18 19 17">※要問</td>
             </tr>
             <tr data-color="blue">
-                <td style="background:#4b5780;text-align:left;">Blue</td>
+                <td style="background:#351c75;text-align:left;">Blue</td>
                 <td class="nodata" data-shop-id="14" data-iphen-id="19">※要問</td>
                 <td class="nodata" data-shop-id="1" data-iphen-id="19">※要問</td>
                 <td class="nodata" data-shop-id="8" data-iphen-id="19">※要問</td>
