--- a/templates/apple_stock/price_matrix.html
+++ b/templates/apple_stock/price_matrix.html
@@ -1845,6 +1845,7 @@
     </div>
 
     <div class="model-gap"></div>
+    <h5 style="padding: 10px;text-align: right;">※データの正確性、および完全性は保証致しません。</h5>
 
 
 </div>
